--- a/webapp/WEB-INF/web.xml
+++ b/webapp/WEB-INF/web.xml
@@ -44,9 +44,10 @@
             WEB-INF/faces-config.xml
         </param-value>
     </context-param>
+
     <context-param>
-        <param-name>javax.faces.PROJECT_STAGE</param-name>
-        <param-value>Development</param-value>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>/WEB-INF/applicationConfig.xml</param-value>
     </context-param>
 
 </web-app>
